(DOCSP-31120) [Q&A] separate further reading reference links from LLM response (#43)
