# chat-server/src/services/dataStreamer.ts
@@ -1,6 +1,6 @@
 import { Response } from "express";
 import { OpenAiStreamingResponse } from "./llm";
-import { logger } from "chat-core";
+import { logger, References } from "chat-core";
 
 function escapeNewlines(str: string): string {
   return str.replaceAll(`\n`, `\\n`);
@@ -44,11 +44,12 @@ function makeServerSentEventDispatcher<
 
 interface StreamParams {
   stream: OpenAiStreamingResponse;
-  furtherReading?: string;
+  references?: string;
 }
 
 type ChatbotStreamEvent =
   | { type: "delta"; data: string }
+  | { type: "references"; data: References }
   | { type: "finished"; data: string };
 
 export interface DataStreamer {
